--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -4,16 +4,13 @@
 h1,
 h2,
 h3 {
-  --font-weight: 600;
-
   overflow: hidden;
   width: fit-content;
-  font-family: var(--font-family-secondary);
+  font-family: var(--font-family-primary);
+  font-weight: var(--fw-700);
   font-size: clamp(2.5rem, 2.2451rem + 1.0458vi, 3.5rem);
-
-  @include media(mobile-m) {
-    line-height: 1.2;
-  }
+  line-height: 1.2;
+  color: var(--color-dark);
 }
 
 a,
@@ -23,18 +20,21 @@ button {
   font-family: var(--font-family-primary);
 }
 
+h1 {
+  font-size: 56px;
+}
+
 h2 {
-  font-size: clamp(40px, 2rem + 1vi, 56px);
+  font-size: clamp(20px, 2rem + 1vi, 32px);
   text-transform: capitalize;
-  color: var(--color-tile-800);
 }
 
 h3 {
-  font-size: clamp(32px, 2rem + 1vi, 40px);
+  font-size: clamp(16px, 2rem + 1vi, 18px);
   text-transform: capitalize;
-  color: var(--color-tile-800);
 }
 
 p {
-  font-size: 16px;
+  font-size: 18px;
+  color: var(--color-dark);
 }
