--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,11 +5,15 @@
   position: fixed;
   top: 0;
   z-index: 10;
-  padding: clamp(12px, rem(20), 22px) 0;
+  padding: clamp(12px, rem(20), 17px) 0;
   width: 100%;
-  background-color: var(--color-white);
+  background-color: var(--color-green-300);
   transition-property: transform, padding;
   transition-duration: 0.15s;
+
+  .container {
+    max-width: 1390px;
+  }
 
   &.hide {
     transform: translateY(-100%);
