--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -2,87 +2,100 @@
 @use "../utils/mixins/"as*;
 
 .services {
-  padding: rem(82) 0;
-  background-color: var(--color-gray-400);
+  padding: 119px 0 99px;
+  background-color: var(--color-gray-100);
+
+  h2 {
+    margin-bottom: 19px;
+    max-width: 500px;
+    line-height: 1.26;
+  }
+
+  h3 {
+    margin-bottom: 14px;
+  }
+
+  p {
+    margin-bottom: 27px;
+  }
+
+  .container {
+    display: flex;
+  }
+
+  &__content {
+    margin-right: 82px;
+    max-width: 572px;
+  }
 
   &__grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 36px 40px;
   }
 
   &__item {
     position: relative;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
     overflow: hidden;
-    border-radius: calc(var(--radius-main) * 2);
-    padding: rem(27);
-    padding-top: rem(90);
+    padding-top: 65px;
     height: 100%;
-    background-color: var(--color-white);
 
     &::before {
       content: "";
       position: absolute;
-      left: rem(27);
-      top: rem(27);
-      border-radius: var(--radius-main);
-      width: 60px;
-      height: 60px;
-      background-image: url("../images/icons/installation.svg");
+      left: 0;
+      top: 0;
+      border-radius: 12px;
+      width: 44px;
+      height: 44px;
+      background-image: url("../images/icons/quality.svg");
       background-position: center;
-      background-size: 23px;
+      background-size: 24px;
       background-repeat: no-repeat;
-      background-color: var(--color-tile-800);
+      background-color: var(--color-green-250);
     }
 
-    &--installation {
+    p {
+      margin-bottom: 0;
+      font-size: 16px;
+      line-height: 1.5;
+    }
+
+    &--quality {
       &::before {
-        background-image: url("../images/icons/installation.svg");
+        background-image: url("../images/icons/quality.svg");
+        background-size: 20px;
+      }
+    }
+
+    &--integrity {
+      &::before {
+        background-image: url("../images/icons/integrity.svg");
         background-size: 24px;
       }
     }
 
-    &--repairs {
+    &--reliability {
       &::before {
-        background-image: url("../images/icons/repairs.svg");
+        background-image: url("../images/icons/reliability.svg");
         background-size: 24px;
       }
     }
 
-    &--replacement {
+    &--innovation {
       &::before {
-        background-image: url("../images/icons/replacement.svg");
-        background-size: 28px;
+        background-image: url("../images/icons/innovation.svg");
+        background-size: 24px;
       }
     }
-  }
-
-  h2 {
-    margin: 0 auto rem(30);
-  }
-
-  h3 {
-    margin-bottom: 14px;
-    font-size: 32px;
-    text-transform: capitalize;
-  }
-
-  p {
-    margin-bottom: rem(26);
-  }
-
-  .btn {
-    margin-top: auto;
   }
 
   @include media(tablet) {
     padding: rem(60) 0;
-
-    &__grid {
-      grid-template-columns: repeat(2, 1fr);
-    }
 
     &__item {
       &:last-child {
@@ -103,12 +116,6 @@
       &:last-child {
         grid-column: auto;
       }
-    }
-  }
-
-  @include media(mobile-m) {
-    .btn {
-      max-width: none;
     }
   }
 }
