--- a/src/scss/pages/home/_request.scss
+++ b/src/scss/pages/home/_request.scss
@@ -4,86 +4,76 @@
 .request {
   $root: &;
 
-  padding: rem(62) 0 rem(75);
-  color: var(--color-tile-800);
-  background-color: var(--color-gray-400);
+  padding: 87px 0 82px;
 
   &__form {
-    margin-bottom: rem(59);
+    margin-right: 175px;
     text-align: center;
+    max-width: 588px;
+    width: 100%;
   }
 
-  &__form-field {
+  &__content {
     display: flex;
-    justify-content: center;
   }
 
-  &__btn {
-    position: relative;
-    display: block;
-    margin: 0 auto;
-    border-radius: var(--radius-main);
-    width: 48px;
-    height: 48px;
-    background-color: var(--color-white);
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      width: 10px;
-      height: 18px;
-      background-image: url("data:image/svg+xml,%3Csvg width='10' height='18' viewBox='0 0 10 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0.292894 0.292893C0.683418 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L9.70711 8.29289C10.0976 8.68342 10.0976 9.31658 9.70711 9.70711L1.70711 17.7071C1.31658 18.0976 0.683417 18.0976 0.292893 17.7071C-0.0976311 17.3166 -0.0976311 16.6834 0.292893 16.2929L7.58579 9L0.292894 1.70711C-0.0976304 1.31658 -0.0976304 0.683417 0.292894 0.292893Z' fill='black'/%3E%3C/svg%3E%0A");
-      background-position: 0 0;
-      background-size: contain;
-      background-repeat: no-repeat;
-      transition-property: filter;
-      transition-duration: 0.2s;
-      rotate: -90deg;
-      translate: -50% -50%;
-    }
+  &__schedule {
+    padding: 45px 0;
   }
-
 
   h2 {
-    margin: 0 auto 10px;
-    text-align: center;
-    font-size: clamp(32px, 2rem + 1vi, 40px);
+    margin-bottom: 34px;
+  }
+
+  h3 {
+    font-size: 20px;
+    line-height: 1.26;
+    margin-bottom: 28px;
+  }
+
+  p  {
+    font-size: 16px;
   }
 
   a {
     display: block;
-    margin: 0 auto rem(55);
-    font-size: 32px;
+    margin-bottom: 28px;
+    font-size: 16px;
     text-decoration: underline;
-    text-align: center;
   }
 
   label {
     display: block;
-    margin-bottom: 12px;
-    font-family: var(--font-family-secondary);
-    font-size: clamp(32px, 2rem + 1vi, 40px);
+
+    &:not(:last-child) {
+      margin-bottom: 16px;
+    }
   }
 
   textarea,
   input {
-    margin-right: 8px;
     border-width: 0;
-    padding: 16px;
+    padding: 17px 16px;
     width: 100%;
-    height: 56px;
     font-family: var(--font-family-primary);
     font-weight: var(--fw-400);
-    max-width: 445px;
     font-size: 16px;
     resize: none;
+    background-color: var(--color-green-150);
+    border-radius: var(--radius-main);
   }
 
-  &__form-box {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 6px;
+  textarea {
+    min-height: 156px;
+    margin-bottom: 10px;
+  }
+
+  .btn {
+    width: 100%;
+    max-width: unset;
+    text-align: center;
+    justify-content: center;
+    padding: 15px;
   }
 
   &--contact {
