adaptive for home

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -18,14 +18,8 @@
   // color
   --color-white: #fff;
   --color-gray-100:#FAFAFA;
+  --color-gray-200: rgba(255, 255, 255, 0.2);
   --color-black: #1c1c1c;
-  // --color-dark-900: #1b1b1b;
-  // --color-gray-400: #f6f7f8;
-  // --color-gray-600: #a4a4a4;
-  // --color-gray-650: #a2a2a2;
-  // --color-gray-700: #4b4b4b;
-  // --color-tile-800: #0c3c43;
-
   --color-dark: #072125;
   --color-green-100:rgba(238, 241, 241, 1);
   --color-green-150: rgba(32, 72, 79, 0.08);
