--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -18,4 +18,10 @@
   &.hide {
     transform: translateY(-100%);
   }
+
+  @include media(mobile-sm) {
+    .logo {
+      max-width: 80%;
+    }
+  }
 }
