--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -5,8 +5,8 @@
 @use "opened";
 @use "hero";
 @use "services";
-@use "featured";
 @use "faq";
 @use "keyframes";
 @use "policy";
 @use "footer";
+@use "project";
