--- a/src/scss/pages/home/_additional.scss
+++ b/src/scss/pages/home/_additional.scss
@@ -21,9 +21,19 @@
   }
 
   @include media(mobile-l) {
-    h2 {
-      margin-bottom: 10px;
-      color: var(--color-tile-800);
+    flex-direction: column;
+
+    p,
+    .container {
+      max-width: unset;
+    }
+
+    p {
+      margin-bottom: 20px;
+    }
+
+    img {
+      aspect-ratio: 16/7;
     }
   }
 }
