--- a/src/scss/pages/service/_benefits.scss
+++ b/src/scss/pages/service/_benefits.scss
@@ -1,11 +1,11 @@
 @use "../../utils/functions/"as*;
 @use "../../utils/mixins/"as*;
 
-.solutions {
-  padding: 77px 0;
+.benefits {
+  padding: 77px 0 76px;
 
   h2 {
-    margin-bottom: 13px;
+    margin-bottom: 95px;
     line-height: 1.26;
   }
 
@@ -21,7 +21,6 @@
   &__grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    margin-bottom: 57px;
     gap: 24px;
   }
 
@@ -58,30 +57,30 @@
       line-height: 1.5;
     }
 
-    &--utility-sheds {
+    &--quality {
       &::before {
-        background-image: url("../images/icons/utility-sheds.svg");
+        background-image: url("../images/icons/quality.svg");
+        background-size: 20px;
+      }
+    }
+
+    &--integrity {
+      &::before {
+        background-image: url("../images/icons/integrity.svg");
         background-size: 24px;
       }
     }
 
-    &--garden-studios {
+    &--reliability {
       &::before {
-        background-image: url("../images/icons/garden-studios.svg");
+        background-image: url("../images/icons/reliability.svg");
         background-size: 24px;
       }
     }
 
-    &--mobile-offices {
+    &--innovation {
       &::before {
-        background-image: url("../images/icons/mobile-offices.svg");
-        background-size: 24px;
-      }
-    }
-
-    &--custom-solutions {
-      &::before {
-        background-image: url("../images/icons/custom-solutions.svg");
+        background-image: url("../images/icons/innovation.svg");
         background-size: 24px;
       }
     }
@@ -93,23 +92,26 @@
 
   @include media(tablet) {
     padding: rem(60) 0;
+
+    &__item {
+      &:last-child {
+        grid-column: 1 / span 2;
+      }
+    }
   }
 
   @include media(mobile-l) {
     &__grid {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: 1fr;
     }
 
     &__item {
-      padding-top: 70px;
+      padding: 24px;
+      padding-top: 96px;
 
       &:last-child {
         grid-column: auto;
       }
     }
-  }
-
-  @include media(mobile-m) {
-    grid-template-columns: 1fr;
   }
 }
