--- a/src/scss/pages/service/_service.scss
+++ b/src/scss/pages/service/_service.scss
@@ -4,16 +4,12 @@
 .service {
   $root: &;
 
-  padding: rem(73) 0;
+  padding: 107px 0 0;
 
   &__grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-
-    &:not(:last-child) {
-      margin-bottom: rem(60);
-    }
+    align-items: center;
 
     &:nth-child(even) {
       #{$root}__image {
@@ -27,20 +23,21 @@
     }
   }
 
-  &__list {
-    margin-bottom: rem(80);
-  }
-
   &__content {
-    overflow: hidden;
-    border-radius: calc(var(--radius-main) * 2);
-    padding: rem(34) rem(33);
-    background-color: var(--color-gray-400);
+    max-width: 342px;
+    margin: 0 auto 0 120px;
+
+    &--reverse {
+      margin: 27px 120px 0 auto;
+    }
+
+    &--last {
+      margin: 27px auto 0 120px; 
+    }
   }
 
   &__image {
     overflow: hidden;
-    border-radius: calc(var(--radius-main) * 2);
 
     img {
       width: 100%;
@@ -49,17 +46,19 @@
   }
 
   h2 {
-    margin: 0 auto rem(23);
+    font-size: 64px;
+    margin: 0 auto 106px;
   }
 
   h3 {
-    margin-bottom: 17px;
-    font-size: 32px;
-    text-transform: capitalize;
+    margin-bottom: 23px;
+    font-size: 40px;
+    line-height: 1.26;
   }
 
   p {
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 1.5;
   }
 
   .btn {
