--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -121,7 +121,9 @@
     }
   }
 
-  @include media(mobile-m) {
-    grid-template-columns: 1fr;
+  @include media(mobile-s) {
+    &__grid {
+      grid-template-columns: 1fr;
+    }
   }
 }
