--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -16,7 +16,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0;
   color: var(--color-gray-700);
-  background-color: var(--color-white);
+  // background-color: var(--color-white);
   font-optical-sizing: auto;
 
   &__body {
