--- a/src/scss/components/_faq.scss
+++ b/src/scss/components/_faq.scss
@@ -2,71 +2,71 @@
 @use "../utils/mixins/"as*;
 
 .faq {
-  padding: rem(66) 0 rem(43);
+  padding: 87px 0 54px;
 
   &__list {
     margin-bottom: rem(32);
   }
 
   &__item {
-    border: 2px solid var(--color-gray-200);
-
     &:not(:last-child) {
-      margin-bottom: 32px;
+      margin-bottom: 16px;
     }
   }
 
   details {
     overflow: hidden;
-    border-radius: calc(var(--radius-main) * 2);
-    background-color: var(--color-gray-400);
+    border-radius: var(--radius-main);
+    background-color: var(--color-green-100);
 
     p {
-      max-width: 750px;
-      font-size: 20px;
+      font-size: 18px;
       line-height: 1.5;
     }
 
     &[open] {
       summary::before {
-        rotate: 180deg;
+        rotate: unset;
       }
     }
   }
 
   summary {
     position: relative;
-    padding: 21px rem(100) 21px rem(33);
-    font-family: var(--font-family-secondary);
-    font-weight: var(--fw-600);
-    font-size: clamp(20px, 1.1017rem + 0.7486vi, 32px);
-    line-height: 40px;
-    color: var(--color-tile-800);
+    padding: 16px 57px 13px 25px;
+    font-family: var(--font-family-primary);
+    font-weight: var(--fw-700);
+    font-size: 18px;
+    line-height: 1.5;
+    color: var(--color-dark);
     cursor: pointer;
 
     &::before {
       content: "";
       position: absolute;
-      right: 40px;
-      top: 20px;
+      right: 25px;
+      top: 16px;
       overflow: hidden;
       border-radius: var(--radius-main);
-      width: 48px;
-      height: 48px;
-      background-image: url("data:image/svg+xml,%3Csvg width='18' height='10' viewBox='0 0 18 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0.292893 0.292893C-0.0976311 0.683417 -0.0976311 1.31658 0.292893 1.70711L8.29289 9.70711C8.68342 10.0976 9.31658 10.0976 9.70711 9.70711L17.7071 1.70711C18.0976 1.31658 18.0976 0.683418 17.7071 0.292893C17.3166 -0.0976311 16.6834 -0.0976311 16.2929 0.292893L9 7.58579L1.70711 0.292893C1.31658 -0.0976311 0.683418 -0.0976311 0.292893 0.292893Z' fill='%231B1B1B'/%3E%3C/svg%3E%0A");
+      width: 32px;
+      height: 32px;
+      background-image: url("data:image/svg+xml,%3Csvg width='19' height='12' viewBox='0 0 19 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.55707 0.666691C9.32326 0.665339 9.09149 0.710155 8.87504 0.798564C8.65858 0.886973 8.46171 1.01724 8.29571 1.18189L1.18946 8.28814C1.02382 8.45378 0.892425 8.65043 0.802779 8.86686C0.713133 9.08328 0.666992 9.31524 0.666992 9.5495C0.666992 9.78375 0.713133 10.0157 0.802779 10.2321C0.892425 10.4486 1.02382 10.6452 1.18946 10.8109C1.35511 10.9765 1.55176 11.1079 1.76818 11.1975C1.9846 11.2872 2.21657 11.3333 2.45082 11.3333C2.68508 11.3333 2.91704 11.2872 3.13347 11.1975C3.34989 11.1079 3.54654 10.9765 3.71218 10.8109L9.55707 4.93044L15.4197 10.5799C15.5832 10.7616 15.7823 10.9077 16.0048 11.0089C16.2272 11.1102 16.4682 11.1644 16.7125 11.1683C16.9569 11.1722 17.1994 11.1256 17.425 11.0314C17.6505 10.9373 17.8542 10.7976 18.0233 10.6212C18.1924 10.4447 18.3233 10.2352 18.4078 10.0059C18.4922 9.77656 18.5285 9.53225 18.5142 9.28827C18.4999 9.04428 18.4355 8.80586 18.3249 8.58792C18.2143 8.36998 18.0599 8.17721 17.8714 8.02166L10.7651 1.16413C10.4402 0.850893 10.0083 0.673044 9.55707 0.666691Z' fill='%2320484F'/%3E%3C/svg%3E");
       background-position: center;
-      background-size: 18px 10px;
+      background-size: 20px 12px;
       background-repeat: no-repeat;
-      background-color: var(--color-white);
+      rotate: 180deg;
     }
 
     +div {
-      padding: 0 34px 24px;
+      padding: 0 55px 15px 25px;
     }
   }
 
   h2 {
-    margin: 0 auto 28px;
+    margin: 0 auto 47px;
+    font-weight: var(--fw-700);
+    font-size: 64px;
+    line-height: 1.2;
     text-align: center;
   }
 
@@ -85,4 +85,8 @@
       display: none;
     }
   }
+}
+
+.container--faq {
+  max-width: 1250px;
 }
