--- a/src/scss/components/_policy.scss
+++ b/src/scss/components/_policy.scss
@@ -2,39 +2,36 @@
 @use "../utils/mixins"as*;
 
 .policy {
-  padding: rem(30) 0;
+  padding: 86px 0;
   line-height: 1.5;
-  color: var(--color-black);
-
-  &__inner {
-    max-width: 680px;
-  }
+  color: var(--color-dark);
 
   h1 {
     position: relative;
-    margin: 0 auto rem(32);
-    font-size: clamp(32px, 1.6176rem + 1.3vi, 56px);
-    color: var(--color-tile-800);
+    margin: 0 auto 48px;
+    font-size: clamp(32px, 1.6176rem + 1.3vi, 64px);
   }
 
   h2 {
+    margin-bottom: 24px;
     font-family: var(--font-family-primary);
-    font-weight: var(--fw-500);
-    font-size: 20px;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
+    font-weight: var(--fw-700);
+    font-size: 32px;
+    line-height: 1.26;
   }
 
   ul {
     margin-bottom: 30px;
-    padding-left: 15px;
-    font-weight: 600;
   }
 
   li {
-    list-style-type: disc;
-    line-height: 1.43;
-    letter-spacing: 0.02em;
+    font-weight: var(--fw-400);
+    font-size: 20px;
+    line-height: 1.3;
+
+    &::before {
+      content: "✓";
+    }
 
     &:not(:last-child) {
       margin-bottom: 3px;
@@ -42,10 +39,11 @@
   }
 
   p {
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 1.5;
 
     &:not(:last-child) {
-      margin-bottom: rem(25);
+      margin-bottom: 24px;
     }
   }
 
