--- a/src/scss/components/_project.scss
+++ b/src/scss/components/_project.scss
@@ -51,12 +51,34 @@
 
   @include media(tablet) {
     padding: 30px 0;
+
+    &__content {
+      max-width: 49%;
+    }
   }
 
   @include media(mobile-l) {
+    flex-direction: column;
+
     h2 {
       margin-bottom: 10px;
-      color: var(--color-tile-800);
+    }
+
+    &__content {
+      max-width: 100%;
+
+      img {
+        width: 100%;
+        aspect-ratio: 16 / 7;
+      }
+    }
+
+    &--reverse {
+      .project__content--title {
+        img {
+          margin-bottom: 30px;
+        }
+      }
     }
   }
 }
