--- a/src/scss/pages/home/_solutions.scss
+++ b/src/scss/pages/home/_solutions.scss
@@ -109,7 +109,9 @@
     }
   }
 
-  @include media(mobile-m) {
-    grid-template-columns: 1fr;
+  @include media(mobile-s) {
+    &__grid {
+      grid-template-columns: 1fr;
+    }
   }
 }
