--- a/src/scss/pages/service/_benefits.scss
+++ b/src/scss/pages/service/_benefits.scss
@@ -93,25 +93,30 @@
   @include media(tablet) {
     padding: rem(60) 0;
 
-    &__item {
-      &:last-child {
-        grid-column: 1 / span 2;
-      }
+    h2 {
+      margin-bottom: 30px;
     }
   }
 
   @include media(mobile-l) {
+    padding: 30px 0;
+
     &__grid {
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(2, 1fr);
     }
 
     &__item {
-      padding: 24px;
-      padding-top: 96px;
+      padding-top: 70px;
 
       &:last-child {
         grid-column: auto;
       }
+    }
+  }
+
+  @include media(mobile-s) {
+    &__grid {
+      grid-template-columns: 1fr;
     }
   }
 }
