--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -17,20 +17,20 @@
 
   // color
   --color-white: #fff;
-  --color-gray-100:#FAFAFA;
+  --color-gray-100:#fafafa;
   --color-gray-200: rgba(255, 255, 255, 0.2);
   --color-black: #1c1c1c;
   --color-dark: #072125;
   --color-green-100:rgba(238, 241, 241, 1);
   --color-green-150: rgba(32, 72, 79, 0.08);
-  --color-green-200: #B8E4DA;
-  --color-green-250: #DCF2ED;
-  --color-green-300: #20484F;
+  --color-green-200: #b8e4da;
+  --color-green-250: #dcf2ed;
+  --color-green-300: #20484f;
 
   //  radius
   --radius-main: 8px;
 
   // shadow
-  --shadow-primary: 0px 8px 8px -4px #1118270A;
-  --shadow-secondary: 0px 20px 24px -4px #1118271A;
+  --shadow-primary: 0px 8px 8px -4px #1118270a;
+  --shadow-secondary: 0px 20px 24px -4px #1118271a;
 }
