--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -68,6 +68,7 @@
     font-size: 16px;
     line-height: 1.5;
     color: var(--color-white);
+    background-color: var(--color-green-300);
 
     &.true {
       border-bottom: 2px solid var(--color-white);
