--- a/src/scss/pages/home/_request.scss
+++ b/src/scss/pages/home/_request.scss
@@ -83,12 +83,8 @@
   @include media(tablet) {
     padding: rem(60) 0;
 
-    &__content {
-      flex-direction: column;
-    }
-
     &__form {
-      margin-bottom: 20px;
+      margin-right: 40px;
     }
 
     a {
@@ -98,8 +94,13 @@
   }
 
   @include media(mobile-l) {
+    &__content {
+      flex-direction: column;
+    }
+
     &__form {
       margin-right: 0;
+      margin-bottom: 20px;
       width: 100%;
       max-width: unset;
     }
@@ -124,6 +125,14 @@
       overflow: hidden;
       margin-bottom: 20px;
       height: 120px;
+    }
+  }
+
+  @include media (mobile-s) {
+    &__schedule {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
   }
 }
