--- a/src/scss/components/_policy.scss
+++ b/src/scss/components/_policy.scss
@@ -6,6 +6,12 @@
   line-height: 1.5;
   color: var(--color-dark);
 
+  &__content {
+    &:not(:last-child) {
+      margin-bottom: 24px;
+    }
+  }
+
   h1 {
     position: relative;
     margin: 0 auto 48px;
